<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories_22"
        android:title="@string/categories"/>

    <item
        android:id="@+id/navigation_trades"
        android:icon="@drawable/ic_trades_28"
        android:title="@string/trades"/>
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_24"
        android:title="@string/wallet"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_20"
        android:title="@string/account"/>

</menu>
