<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="tranaction"
            type="me.hashcode.dawadeals.data.model.trade.Transaction" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <View
                android:id="@+id/helper"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/discount"
                app:layout_constraintHorizontal_weight="4"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
            <!--                app:srcCompat="@drawable/ic_trade_buy"-->
            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/buy"
                android:layout_marginStart="20dp"
                android:textColor="@color/green"
                app:layout_constraintStart_toStartOf="@id/helper"
                app:layout_constraintBottom_toTopOf="@+id/type_sell"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <!--                app:srcCompat="@drawable/ic_trade_buy"-->
            <TextView
                android:id="@+id/type_sell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/sell"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="@id/type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/type"
                app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintTop_toBottomOf="@+id/type" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/product"
                android:textColor="#F2F2F2"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/category_name"
                app:layout_constraintEnd_toEndOf="@+id/helper"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/category"
                android:textColor="@color/dark_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/price_discount"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/price_discount"
                app:layout_constraintEnd_toStartOf="@+id/quantity"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/helper"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/price_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/price_egp"
                android:textColor="@color/dark_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/discount"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="@+id/discount"
                app:layout_constraintTop_toBottomOf="@+id/discount"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/quantity"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/part_deal"
                app:layout_constraintEnd_toStartOf="@+id/expire_date"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/discount"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/part_deal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/part_deal"
                android:textColor="@color/dark_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/quantity"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/quantity"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/expire_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/exp_date"
                android:textColor="@color/purble"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/market_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/market_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/market_price"
                android:textColor="@color/dark_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/expire_date"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="@+id/expire_date"
                app:layout_constraintTop_toBottomOf="@+id/expire_date"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/transactions_divider"/>
    </LinearLayout>
</layout>